# uni-cpp-library-project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
data/: library_mock_data.sql  library_sqlite_init.sql
include/auth/: Authentication.h
include/consts/: Consts.h
include/db/: DBManager.h  DataSet.h
include/dialogs/: BookDialog.h
include/pages/: AdminPage.h  LoginPage.h  MainWindow.h  UserAvailablePage.h  UserMenuPage.h  UserRentedPage.h
include/router/: AppRouter.h
include/structs/: Book.h
include/user/: Admin.h  User.h  UserBase.h
include/utils/: DateUtils.h  SqlUtils.h  StringUtils.h
src/auth/: Authentication.cpp
src/db/: DBManager.cpp  DataSet.cpp
src/dialogs/: BookDialog.cpp
src/pages/: AdminPage.cpp  LoginPage.cpp  MainWindow.cpp  UserAvailablePage.cpp  UserMenuPage.cpp  UserRentedPage.cpp
src/router/: AppRouter.cpp
src/user/: Admin.cpp  User.cpp  UserBase.cpp
src/utils/: DateUtils.cpp  SqlUtils.cpp  StringUtils.cpp
